--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,9 @@ $RECYCLE.BIN/
 
 
 # End of https://www.gitignore.io/api/unity,macos,windows
+
+Assets/Live2D*
+Assets/Oculus*
+Assets/csc*
+Assets/mcs*
+
